檢查接案設定
